--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@
 :root::-webkit-scrollbar {
   display: none;
 }
+.lock-screen {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+  position: fixed;
+}
 .fade{
   z-index: 1;
   background-color: rgb(5, 4, 48, .5);
@@ -30,6 +36,7 @@ h1 {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
 }
 #container {
   position: relative;
@@ -88,6 +95,7 @@ h1 {
   top: -42vw;
   background-color: red;
   border: 5px solid #c90a0a;
+
 }
 #piece {
   top: -10vh;
@@ -119,9 +127,9 @@ h1 {
 #pop-up-container{
   position: absolute;
   left: 0px;
-  top: 0px;
+  top: -30vh;
   width: 100vw;
-  height: 100vh;
+  height: 130vh;
   display: flex;
   flex-direction: column;
   align-items: center;
