--- a/gameStyle.css
+++ b/gameStyle.css
@@ -1,21 +1,96 @@
-#container{
+:root {
+  --topPos: none;
+  --col: none;
+}
+body {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #eee9e3;
+}
+
+#container {
+  width: 55vw;
+  height: calc(13vh + 40vw);
+  display: grid;
+  grid-template-columns: repeat(7, auto);
+  grid-template-rows: repeat(7, calc(40vw / 6));
+  background-color: inherit;
+
+  justify-content: space-evenly;
+  justify-items: center;
+}
+img {
+  grid-column-start: 1;
+  grid-column-end: 8;
+  grid-row-start: 2;
+  grid-row-end: 8;
+  position: relative;
+  width: 55vw;
+  height: 40vw;
+  border-radius: 0.57vw;
+  z-index: 1;
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
+
+.col {
+  grid-row-start: 1;
+  grid-row-end: 8;
+  grid-column: 1;
+  z-index: 2;
+  background-color: transparent;
+  width: calc(55vw / 7);
+  height: 100%;
+}
+.circle {
+  position: relative;
+  align-self: center;
+  background-color: red;
+  width: 5.1vw;
+  height: 5.1vw;
+  border-radius: 200px;
+  z-index: 0;
+}
+.follow {
+  grid-row: 1;
+  top: var(--topPos);
+  grid-column: var(--col);
+}
+.drop {
+  animation-name: fall;
+  animation-duration:700ms;
+  animation-timing-function: ease-in;
+  
+}
+.stop{
+    /* top: 39.5vw; */
+    grid-row: 7;
+    grid-column: var(--col);
     position: relative;
-    top: 15vh;
-    width: 55vw;
-    height: 40vw;
-    border-radius: .57vw;
-    z-index: 1;
+    top: -.7vw;
 }
-body{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #eee9e3;
-}
-#circle{
-    position: absolute;
-    background-color: yellow;
-    width: 95px;
-    height: 95px;
-    border-radius: 50px;
+@keyframes fall {
+    0%{
+        top: 0vw;
+    }
+    50%{
+        top: 39.3vw;
+    }
+    60%{
+        top: 36vw;
+    }
+    70%{
+        top: 39.3vw;
+    }
+    80%{
+        top: 37vw;
+    }
+    100%{
+        top: 39.3vw;
+    }
 }
