--- a/gameStyle.css
+++ b/gameStyle.css
@@ -57,11 +57,12 @@ img {
 }
 .follow {
   grid-row: 1;
-  animation: shift 2s ease-in;
+  animation: shift 600ms ease;
   transform: translateX(var(--startCol));
 }
 
 .drop {
+  grid-column: var(--dropCol);
   animation-name: fall;
   animation-duration:700ms;
   animation-timing-function: ease-in;
@@ -69,7 +70,7 @@ img {
 }
 .stop{
     grid-row: var(--row);
-    grid-column: var(--startCol);
+    grid-column: var(--dropCol);
     position: relative;
     transform: translateY(-.7vw);
 }
