--- a/gameStyle.css
+++ b/gameStyle.css
@@ -27,12 +27,12 @@ img {
   height: 40vw;
   border-radius: 0.57vw;
   z-index: 1;
-  user-drag: none;
+  /* user-drag: none;
   -webkit-user-drag: none;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
-  -ms-user-select: none;
+  -ms-user-select: none; */
 }
 
 .col {
