--- a/gameStyle.css
+++ b/gameStyle.css
@@ -1,4 +1,3 @@
-
 body {
   display: flex;
   justify-content: space-evenly;
@@ -8,9 +7,9 @@ body {
 
 #container {
   width: 55vw;
-  height: calc(13vh + 40vw);
+  height: 46vw;
   display: grid;
-  grid-template-columns: repeat(7, auto);
+  grid-template-columns: repeat(7, calc(55vw / 7));
   grid-template-rows: repeat(7, calc(40vw / 6));
   background-color: inherit;
 
@@ -24,7 +23,7 @@ img {
   grid-row-end: 8;
   position: relative;
   width: 55vw;
-  height: 40vw;
+  height: auto;
   border-radius: 0.57vw;
   z-index: 1;
   /* user-drag: none;
@@ -42,22 +41,22 @@ img {
   z-index: 2;
   background-color: black;
   opacity: 0;
-  width: calc(55vw / 7);
+  width: 100%;
   height: 100%;
 }
 .circle {
   position: relative;
   align-self: center;
   background-color: red;
-  width: 5.1vw;
-  height: 5.1vw;
+  width: 5vw;
+  height: 5vw;
   border-radius: 200px;
   z-index: 0;
   grid-column: 1;
 }
 .follow {
   grid-row: 1;
-  animation: shift 600ms ease;
+  animation: shift 400ms ease;
   transform: translateX(var(--startCol));
 }
 
@@ -69,10 +68,15 @@ img {
   
 }
 .stop{
+    z-index: 1;
     grid-row: var(--row);
     grid-column: var(--dropCol);
     position: relative;
     transform: translateY(-.7vw);
+    animation: grow 300ms ease-out;
+    z-index: 1;
+    width: 5.05vw;
+    height: 5.05vw;
 }
 @keyframes fall {
     0%{
@@ -101,4 +105,58 @@ img {
   100%{
     transform: translateX(var(--endCol))
   }
+}
+@keyframes grow {
+  0%{
+    z-index: 0;
+    width: 5vw;
+    height: 5vw;
+  }
+  100%{
+    z-index: 1;
+    width: 5.04vw;
+    height: 5.04vw;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  img{
+    width: 90vw;
+    height: auto;
+  }
+  #container{
+    width: 90vw;
+    height: 76.36vw;
+    grid-template-columns: repeat(7, calc(90vw / 7));
+    grid-template-rows: repeat(7, calc(65.45vw / 6));
+  }
+  .circle{
+    width: 8.9vw;
+    height: 8.9vw;
+  }
+  .stop{
+    animation: none;
+    z-index: 0;
+  }
+  @keyframes fall {
+    0%{
+      transform: translateY(0vw);
+    }
+    50%{
+        transform: translateY(63.818vw);
+    }
+    60%{
+        transform: translateY(58.9vw);
+    }
+    70%{
+        transform: translateY(63.818vw);
+    }
+    80%{
+        transform: translateY(60.545vw);
+    }
+    100%{
+        transform: translateY(63.818vw);
+    }
+  }
+  
 }
