--- a/gameStyle.css
+++ b/gameStyle.css
@@ -9,6 +9,7 @@
   --dropDepth: 39.3vw;
   --firstBounce: 36vw;
   --secondBounce: 37vw;
+  --delay: 0ms;
 }
 body {
   font-family: "Varela Round", sans-serif;
@@ -116,7 +117,7 @@ body {
 #container {
   grid-column: 2;
   width: 55vw;
-  height: 46vw;
+  height: 98vh;
   display: grid;
   grid-template-columns: repeat(7, calc(55vw / 7));
   grid-template-rows: repeat(7, calc(40vw / 6));
@@ -143,6 +144,7 @@ img {
 }
 
 .col {
+  position: relative;
   grid-row-start: 1;
   grid-row-end: 8;
   grid-column: var(--startCol);
@@ -203,7 +205,21 @@ img {
 }
 
 .disappear{
-  animation: shrink 300ms ease-in;
+  transform: scale(0);
+  transition: transform 200ms ease-in-out;
+
+ 
+
+}
+.red-won{
+  box-shadow: inset 0px 0px 30px 3px #FFD900;
+  border-color: #FFD900;
+  transition: box-shadow 400ms;
+}
+.yellow-won{
+  box-shadow: inset 0px 0px 30px 4px #ca2b2b;
+  border-color: #ca2b2b;
+  transition: box-shadow 400ms;
 }
 
 @keyframes shrink {
